2002-11-21  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-background.c:
	(image_loading_done_callback): Only set image of required size,
	when now pixmap needed, kill old pixmap and set color.
	(free_root_pixmap): New function to free root background image

	Patch from Brian.Cameron@sun.com

2002-11-20  Anders Carlsson  <andersca@gnu.org>

	* components/Makefile.am:
	Remove sample and loser from the default build.
	
	* libnautilus-private/nautilus-icon-factory.c:
	(nautilus_icon_factory_get_icon_for_file):
	Special-case the trash location so that it gets the correct icon.
	
2002-11-19  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	(clear_bonobo_pages) Don't reference wrong notebook pages
	 (properties_window_file_changed_callback) correct strcmp comparison

2002-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* components/text/Makefile.am:
	* components/throbber/Makefile.am:
	* components/tree/Makefile.am:
	Add CLEANFILES so that make clean deletes $(server_DATA) and
	$(server_DATA).in

	This change should have been made on September 20th

	* libnautilus-private/nautilus-icon-container.c (button_press_event):
	Get double_click_time from GtkSettings property instead of using
	hardcoded value.

	This fixes bug #92372.

2002-11-13  Diego Gonzalez  <diego@pemas.net>

	* libnautilus-private/nautilus-theme.[c-h]:
	(nautilus_theme_set_theme), (nautilus_theme_make_preview_pixbuf),
	(nautilus_theme_for_each_theme), (nautilus_theme_remove_user_theme),
	(nautilus_theme_install_user_theme)

	* libnautilus-private/nautilus-theme.c:
	(load_theme_document), (vfs_file_exists), (theme_get_property),
	(theme_get_name_property), (theme_get_description_property),
	(theme_list_prepend), (has_theme_xml), (theme_get_themes_for_location),
	(theme_get_builtin_themes), (theme_get_user_themes),
	(theme_list_invoke_callback), (attributes_free)

	Theme cleanup, remove all these functions since they are no longer