@@ -336,11 +336,7 @@ components/adapter/Makefile
 components/hardware/Makefile
 components/hardware/icons/Makefile
 components/history/Makefile
-components/loser/Makefile
-components/loser/content/Makefile
-components/loser/sidebar/Makefile
 components/notes/Makefile
-components/sample/Makefile
 components/text/Makefile
 components/text/services/Makefile
 components/throbber/Makefile
