@@ -10,17 +10,8 @@ components/history/Nautilus_View_history.server.in.in
 components/history/nautilus-history-view.c
 components/image_properties/Nautilus_View_image_properties.server.in.in
 components/image_properties/nautilus-image-properties-view.c
-components/loser/content/Nautilus_View_content-loser.server.in.in
-components/loser/content/nautilus-content-loser-ui.xml
-components/loser/content/nautilus-content-loser.c
-components/loser/sidebar/Nautilus_View_sidebar-loser.server.in.in
-components/loser/sidebar/nautilus-sidebar-loser-ui.xml
-components/loser/sidebar/nautilus-sidebar-loser.c
 components/notes/Nautilus_View_notes.server.in.in
 components/notes/nautilus-notes.c
-components/sample/Nautilus_View_sample.server.in.in
-components/sample/nautilus-sample-content-view-ui.xml
-components/sample/nautilus-sample-content-view.c
 components/text/Nautilus_View_text.server.in.in
 components/text/nautilus-text-view-ui.xml
 components/text/nautilus-text-view.c
