@@ -1,3 +1,7 @@
+2002-11-24  Dave Camp  <dave@ximian.com>
+
+	* POTFILES.in: Remove sample and loser files.
+
 2002-11-24  Hasbullah Bin Pit <sebol@ikhlas.com>
 
         * ms.po: Updated Malay Translation.
