@@ -1,3 +1,7 @@
+2002-11-24  Dave Camp  <dave@ximian.com>
+
+	* configure.in: Remove sample and loser from the build.
+
 2002-11-21  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c:
